--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
+# Ignore cache build and config files
 __pycache__/
 build/
+
+# Ignore experiments
 src/
 tmp/
 fig/
-test_data/6acv_A_29-94_scores.csv
-*.so
 0_*
 0-*
 1-*
@@ -16,3 +17,8 @@ test_data/6acv_A_29-94_scores.csv
 7-*
 8-*
 9-*
+
+# Ignore compiled files
+*.so
+*.a
+*.o
